# Conan

./: readme.md
configuration/: Doxyfile  run_container.sh
math_package/: CMakeLists.txt  conanfile.py  math_lib.cpp
math_package/new/: CMakeCache.txt  Makefile  cmake_install.cmake  conanbuildinfo.cmake  graph_info.json
math_package/new/src/: CMakeLists.txt  math_lib.h
math_package/package/: conanmanifest.txt
math_package/ww/: conanfile.py
md5/: file.html
md5/configuration/: Dockerfile  build_image.sh  run_container.sh
